# cookieclicker

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
coverage_test/: Cargo.toml  meow-1004-5059966654434842390_0.profraw
src/: main.rs  main_old.rs  user.rs
tap_to_increase/: Cargo.toml
tap_to_increase/src/: main.rs
