[package]
name = "cookieclicker"
version = "0.1.0"
authors = ["1839b <https://github.com/1839b>"]
edition = "2021"

[package.metadata.docs.rs]
rustdoc = true

[dependencies]
crossterm = "0.26.1"

[package.metadata]
description = "It is like cookie clicker but you can just hold down the spacebar and win automagically, this isn't me being lazy by the way... IT IS A FEATURE."
